# liquid-rust

./: .clippy.toml  .clog.toml  .gitattributes  .gitignore  .travis.yml  AGENTS.md  AI_THREAD_HANDOFF.md  CHANGELOG.md  CLAUDE_REVIEW_CONTEXT.md  CONTRIBUTING.md  Cargo.toml  KEY_DECISIONS.md  Makefile  PRODUCTION_CONFORMANCE_SPLIT_SPEC.md  README.md  RENDER_SESSION_BRIDGE_PLAN.md  SHOPIFY_RUBY_TEST_HARNESS_PLAN.md  appveyor.yml  azure-pipelines.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  renovate.json5  settings.yml
.specify/: init-options.json  integration.json
benches/: handlebars.rs  handlebars_baseline.rs  handlebars_liquid.rs  liquid.rs  tera_bigcontext.rs  tera_bigcontext_baseline.rs  tera_bigcontext_liquid.rs  tera_template.rs  tera_template_baseline.rs  tera_template_liquid.rs  tera_tera.rs  tera_tera_baseline.rs  tera_tera_liquid.rs
ci/: install.sh  script.sh
crates/compiler/: Cargo.toml  README.md
crates/compiler/src/: filter.rs  filter_chain.rs  parser.rs  text.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: conformance.rs  lib.rs  macros.rs
crates/core/src/error/: clone.rs  error.rs  result_ext.rs  trace.rs
crates/core/src/model/: find.rs  macros.rs  mod.rs  ser.rs
crates/core/src/model/array/: mod.rs
crates/core/src/model/object/: map.rs  mod.rs  ser.rs
crates/core/src/model/scalar/: date.rs  datetime.rs  mod.rs  ser.rs
crates/core/src/model/scalar/datetime/: strftime.rs
crates/core/src/model/value/: cow.rs  display.rs  mod.rs  ser.rs  state.rs  values.rs  view.rs
crates/core/src/parser/: block.rs  filter.rs  filter_chain.rs  grammar.pest  lang.rs  parser.rs  registry.rs  tag.rs  text.rs
crates/core/src/partials/: eager.rs  inmemory.rs  lazy.rs  mod.rs  ondemand.rs
crates/core/src/runtime/: expression.rs  mod.rs  partials.rs  policy.rs  renderable.rs  runtime.rs  stack.rs  template.rs  variable.rs
crates/derive/: Cargo.toml  README.md
crates/derive/src/: filter_parameters.rs  helpers.rs  lib.rs  object_view.rs  value_view.rs
crates/derive/src/filter/: display.rs  from_filter_parameters.rs  mod.rs
crates/derive/src/parse_filter/: filter_reflection.rs  mod.rs  parse.rs  parse_filter.rs
crates/error/: Cargo.toml  README.md
crates/error/src/: error.rs  result_ext.rs  trace.rs
crates/help-md/: Cargo.toml  README.md
crates/help-md/src/: lib.rs
crates/interpreter/: Cargo.toml  README.md
crates/interpreter/src/: context.rs  expression.rs  lib.rs  partials.rs  runtime.rs  stack.rs  store.rs  template.rs  variable.rs
crates/kstring/: Cargo.toml  README.md
crates/kstring/benches/: cow.rs  kstring.rs  kstringcow.rs  kstringref.rs  macros.rs  str.rs  string.rs
crates/kstring/src/: cow.rs  fixed.rs  lib.rs  ref.rs  string.rs
crates/lib/: Cargo.toml  README.md
crates/lib/src/: lib.rs
crates/lib/src/extra/: date.rs
crates/lib/src/filters/: mod.rs
crates/lib/src/filters/extra/: date.rs  mod.rs
crates/lib/src/filters/jekyll/: array.rs  mod.rs
crates/lib/src/filters/shopify/: mod.rs  pluralize.rs
crates/lib/src/filters/std/: math.rs  url.rs
crates/lib/src/filters/std/string/: operate.rs  truncate.rs
crates/lib/src/jekyll/: array.rs  include_tag.rs  slugify.rs
crates/lib/src/shopify/: pluralize.rs
crates/lib/src/stdlib/: mod.rs
crates/lib/src/stdlib/blocks/: capture_block.rs  case_block.rs  comment_block.rs  for_block.rs  if_block.rs  ifchanged_block.rs  mod.rs  raw_block.rs
crates/lib/src/stdlib/filters/: array.rs  date.rs  html.rs  math.rs  mod.rs  slice.rs  url.rs
crates/lib/src/stdlib/filters/string/: case.rs  mod.rs  strip.rs  truncate.rs
crates/lib/src/stdlib/tags/: assign_tag.rs  cycle_tag.rs  echo_tag.rs  include_tag.rs  increment_tags.rs  interrupt_tags.rs  mod.rs  render_tag.rs
crates/lib/src/tags/: capture_block.rs  cycle_tag.rs  for_block.rs  ifchanged_block.rs  include_tag.rs  interrupt_tags.rs
crates/lib/tests/: test_helper.rs
crates/lib/tests/conformance_jekyll/: mod.rs  slugify_test.rs  test_filters.rs
crates/ruby-ext/: Cargo.toml  extconf.rb
crates/ruby-ext/src/: callbacks.rs  context.rs  environment.rs  errors.rs  lib.rs  template.rs  values.rs
crates/sstring/: Cargo.toml  README.md
crates/sstring/benches/: cow.rs  sstring.rs  sstringcow.rs  sstringref.rs
crates/sstring/src/: cow.rs  lib.rs  ref.rs  string.rs
crates/value/: Cargo.toml  README.md
crates/value/src/: array.rs  cow.rs  date.rs  find.rs  lib.rs  macros.rs  map.rs  object.rs  path.rs  scalar.rs  ser.rs  state.rs  values.rs  view.rs
crates/value/src/object/: map.rs  mod.rs  ser.rs
crates/value/src/scalar/: mod.rs  ser.rs
crates/value/src/value/: ser.rs  values.rs
docs/: PLAN_DECISIONS.md  RENDER_OPTIONS_GUIDE.md
harness/: README.md  baseline.yml  bootstrap.rb  classifications.yml
liquid-bin/: Cargo.toml
liquid-bin/src/: main.rs
liquid-compiler/: Cargo.toml  README.md
liquid-compiler/src/: block.rs  filter.rs  filter_chain.rs  grammar.pest  include.rs  lang.rs  lexer.rs  lib.rs  options.rs  parser.rs  registry.rs  tag.rs  text.rs  token.rs
liquid-derive/: Cargo.toml  README.md
liquid-derive/src/: filter_parameters.rs  helpers.rs
liquid-derive/src/filter/: display.rs
liquid-derive/src/parse_filter/: filter_reflection.rs  mod.rs  parse_filter.rs
liquid-error/: Cargo.toml  README.md
liquid-error/src/: clone.rs  error.rs  lib.rs  result_ext.rs  trace.rs
liquid-help-md/: Cargo.toml  README.md
liquid-interpreter/: Cargo.toml  README.md
liquid-interpreter/src/: argument.rs  context.rs  expression.rs  filter.rs  filter_chain.rs  globals.rs  lib.rs  output.rs  partials.rs  registry.rs  renderable.rs  stack.rs  store.rs  template.rs  text.rs  variable.rs
liquid-value/: Cargo.toml  README.md
liquid-value/src/: date.rs  index.rs  lib.rs  macros.rs  map.rs  path.rs  scalar.rs  ser.rs  values.rs
liquid-value/tests/: value.rs
src/: context.rs  error.rs  filters.rs  lexer.rs  lib.rs  main.rs  nom_parser.rs  output.rs  parser.rs  parser.rs.bk  partials.rs  path.rs  reflection.rs  template.rs  text.rs  token.rs  value.rs  variable.rs
tests/: errors.rs  (+19 more)
(+201 files in other folders)
