[workspace]
members = [
  "crates/*",
]

[package]
name = "liquid"
version = "0.26.1"
description = "The liquid templating language for Rust"
authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/cobalt-org/liquid-rust"
documentation = "https://docs.rs/liquid"
readme = "README.md"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
edition = "2021"
rust-version = "1.60.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*",
  "benches/**/*",
]

[package.metadata.release]
pre-release-replacements = [
  {file="README.md", search="liquid = \".*\"", replace="liquid = \"{{version}}\"", exactly=1},
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/assert-rs/predicates-rs/compare/{{tag_name}}...HEAD", exactly=1},
  {file="src/lib.rs", search="//! liquid = \".*\"", replace="//! liquid = \"{{version}}\"", exactly=1},
]

[features]
default = ["stdlib"]
stdlib = ["liquid-lib/stdlib"]

[dependencies]
doc-comment = "0.3"
liquid-core = { version = "^0.26.1", path = "crates/core" }
liquid-derive = { version = "^0.26.1", path = "crates/derive" }
liquid-lib = { version = "^0.26.1", path = "crates/lib", optional = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_yaml = "0.8"
tera = { version = "1.17", default-features = false }
handlebars = "4.3"
serde_derive = "1.0"
serde_json = "1.0"
regex = "1.7"
criterion = "0.4"
snapbox = "0.4.4"

[[bench]]
name = "liquid"
harness = false

[[bench]]
name = "handlebars"
harness = false

[[bench]]
name = "tera_bigcontext"
harness = false

[[bench]]
name = "tera_template"
harness = false

[[bench]]
name = "tera_tera"
harness = false
