[package]
name = "liquid-bin"
version = "0.19.0"
authors = ["Ed Page <eopage@gmail.com>"]
description = "The liquid templating language for Rust"
repository = "https://github.com/cobalt-org/liquid-rust"
documentation = "https://docs.rs/liquid"
readme = "README.md"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
license = "MIT"

[badges]
azure-devops = { project = "cobalt-org", pipeline = "liquid-rust" }

[dependencies]
liquid = { version = "0.19", path = "../" }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
serde_yaml = "0.8"
serde_json = "1.0"
derive_more = "0.15.0"
