[package]
name = "liquid-compiler"
version = "0.15.0"
authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
description = "The liquid templating language for Rust"
repository = "https://github.com/cobalt-org/liquid-rust/tree/master/liquid-compiler"
documentation = "https://docs.rs/liquid-compiler"
readme = "README.md"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
license = "MIT"

[badges]
travis-ci = { repository = "cobalt-org/liquid-rust" }
appveyor  = { repository = "johannhof/liquid-rust" }

[dependencies]
regex = "1.0"
lazy_static = "1.0"
liquid-error = { version = "0.15.0", path = "../liquid-error" }
liquid-value = { version = "0.15.0", path = "../liquid-value" }
liquid-interpreter = { version = "0.15.0", path = "../liquid-interpreter" }
