[package]
name = "liquid-derive"
version = "0.19.0"
authors = ["Pedro Gonçalo Correia <goncalerta@gmail.com>"]
description = "The liquid templating language for Rust"
readme = "README.md"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
license = "MIT"

[lib]
proc-macro = true

[badges]
azure-devops = { project = "cobalt-org", pipeline = "liquid-rust" }

[dependencies]
syn = "0.15"
proc-quote = "0.2"
proc-macro2 = "1.0.2"

# Exposed in API
liquid-error = { version = "^0.19", path = "../liquid-error" }
liquid-value = { version = "^0.19", path = "../liquid-value" }
liquid-interpreter = { version = "^0.19", path = "../liquid-interpreter" }
liquid-compiler = { version = "^0.19", path = "../liquid-compiler" }
