[package]
name = "liquid-error"
version = "0.18.0"
authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
description = "The liquid templating language for Rust"
repository = "https://github.com/cobalt-org/liquid-rust/tree/master/liquid-error"
documentation = "https://docs.rs/liquid-error"
readme = "README.md"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
license = "MIT"

[badges]
travis-ci = { repository = "cobalt-org/liquid-rust" }
appveyor  = { repository = "johannhof/liquid-rust" }

[dependencies]
