[package]
name = "liquid-interpreter"
version = "0.17.1"
authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
description = "The liquid templating language for Rust"
repository = "https://github.com/cobalt-org/liquid-rust/tree/master/liquid-interpreter"
documentation = "https://docs.rs/liquid-interpreter"
readme = "README.md"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
license = "MIT"

[badges]
travis-ci = { repository = "cobalt-org/liquid-rust" }
appveyor  = { repository = "johannhof/liquid-rust" }

[dependencies]
itertools = "0.7.0"
# Exposed in API
liquid-error = { version = "0.16", path = "../liquid-error" }
liquid-value = { version = "0.17", path = "../liquid-value" }

[dev-dependencies]
serde_yaml = "0.8"
