[package]
name = "liquid-compiler"
version = "0.20.0-alpha.4"
authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
description = "The liquid templating language for Rust"
repository = "https://github.com/cobalt-org/liquid-rust/tree/master/crate/compiler"
documentation = "https://docs.rs/liquid-compiler"
readme = "README.md"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
license = "MIT"

[badges]
azure-devops = { project = "cobalt-org", pipeline = "liquid-rust" }

[dependencies]
itertools = "0.8.0"
pest = "2.0"
pest_derive = "2.0"

# Exposed in API
liquid-error = { version = "0.20.0-alpha.0", path = "../error" }
liquid-value = { version = "0.20.0-alpha.0", path = "../value" }
liquid-interpreter = { version = "0.20.0-alpha.0", path = "../interpreter" }
