[package]
name = "liquid-core"
version = "0.26.1"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Core liquid functionality"
repository = "https://github.com/cobalt-org/liquid-rust/tree/master/crate/core"
documentation = "https://docs.rs/liquid-core"
readme = "README.md"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="README.md", search="liquid-core = \".*\"", replace="liquid-core = \"{{version}}\"", exactly=1},
]

[dependencies]
anymap2 = "0.13"
itertools = "0.10.0"
num-traits = "0.2"
pest = "2.0"
pest_derive = "2.0"
regex = "1.5"

# Exposed in API
time = { version = "0.3", default-features = false, features = ["formatting", "macros", "parsing"] }
serde = { version = "1.0", features = ["derive"] }
kstring = { version = "2.0", features = ["serde"] }
liquid-derive = { version = "^0.26.1", path = "../derive", optional = true }

[dev-dependencies]
serde_yaml = "0.8"
snapbox = "0.4.4"

[features]
default = []
derive = ["liquid-derive"]
