[package]
name = "liquid-core"
version = "0.26.4"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Core liquid functionality"
repository = "https://github.com/cobalt-org/liquid-rust/tree/master/crate/core"
documentation = "https://docs.rs/liquid-core"
readme = "README.md"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anymap2 = "0.13"
itertools = "0.11.0"
num-traits = "0.2"
pest = "2.0"
pest_derive = "2.0"
regex = "1.5"

# Exposed in API
time = { version = "0.3", default-features = false, features = ["formatting", "macros", "parsing"] }
serde = { version = "1.0.157", features = ["derive"] }
kstring = { version = "2.0", features = ["serde"] }
liquid-derive = { version = "^0.26.4", path = "../derive", optional = true }

[dev-dependencies]
serde_yaml = "0.8"
snapbox = "0.4.13"

[features]
default = []
derive = ["liquid-derive"]
