[package]
name = "liquid-core"
version = "0.26.11"
description = "Core liquid functionality"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anymap2 = "0.13"
itertools = "0.14.0"
pest = "2.0"
pest_derive = "2.0"
regex = "1.5"

# Exposed in API
time = { version = "0.3.37", default-features = false, features = ["formatting", "macros", "parsing"] }
serde = { version = "1.0.157", features = ["derive"] }
kstring = { version = "2.0", features = ["serde"] }
liquid-derive = { version = "^0.26.10", path = "../derive", optional = true }

[dev-dependencies]
serde_yaml = "0.9.0"
snapbox = "0.6.5"

[features]
default = []
derive = ["liquid-derive"]
