[package]
name = "liquid-derive"
version = "0.26.2"
authors = ["Pedro Gonçalo Correia <goncalerta@gmail.com>"]
description = "The liquid templating language for Rust"
readme = "README.md"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
repository = "https://github.com/cobalt-org/liquid-rust"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
proc-quote = "0.4"
proc-macro2 = "1.0"
