[package]
name = "liquid-derive"
version = "0.26.10"
description = "The liquid templating language for Rust"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.28"
syn = "2.0"

[lints]
workspace = true
