[package]
name = "liquid-error"
version = "0.20.0-alpha.2"
authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
description = "The liquid templating language for Rust"
repository = "https://github.com/cobalt-org/liquid-rust/tree/master/crate/error"
documentation = "https://docs.rs/liquid-error"
readme = "README.md"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
license = "MIT OR Apache-2.0"
edition = "2018"

[badges]
azure-devops = { project = "cobalt-org", pipeline = "liquid-rust" }

[dependencies]
# Exposed in API
kstring = { version = "0.1.0-alpha.0", path = "../kstring" }
