[package]
name = "liquid-help-md"
version = "0.26.3"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Describe Liquid language via markdown"
repository = "https://github.com/cobalt-org/liquid-rust"
documentation = "https://docs.rs/liquid"
readme = "README.md"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
liquid-core = { version = "^0.26.3", path = "../core" }
