[package]
name = "liquid-help-md"
version = "0.26.8"
description = "Describe Liquid language via markdown"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
liquid-core = { version = "^0.26.11", path = "../core" }

[lints]
workspace = true
