[package]
name = "liquid-interpreter"
version = "0.19.0"
authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
description = "The liquid templating language for Rust"
repository = "https://github.com/cobalt-org/liquid-rust/tree/master/liquid-interpreter"
documentation = "https://docs.rs/liquid-interpreter"
readme = "README.md"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
license = "MIT"
edition = "2018"

[badges]
azure-devops = { project = "cobalt-org", pipeline = "liquid-rust" }

[dependencies]
itertools = "0.8.0"
anymap = "0.12"
# Exposed in API
sstring = { version = "0.1.0", path = "../sstring" }
liquid-error = { version = "^0.19", path = "../error" }
liquid-value = { version = "^0.19", path = "../value" }

[dev-dependencies]
serde_yaml = "0.8"
