[package]
name = "liquid-interpreter"
version = "0.20.0-alpha.6"
authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
description = "The liquid templating language for Rust"
repository = "https://github.com/cobalt-org/liquid-rust/tree/master/crate/interpreter"
documentation = "https://docs.rs/liquid-interpreter"
readme = "README.md"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
license = "MIT"
edition = "2018"

[badges]
azure-devops = { project = "cobalt-org", pipeline = "liquid-rust" }

[dependencies]
itertools = "0.8.0"
anymap = "0.12"
# Exposed in API
kstring = { version = "0.1.0-alpha.0", path = "../kstring" }
liquid-error = { version = "0.20.0-alpha.0", path = "../error" }
liquid-value = { version = "0.20.0-alpha.0", path = "../value" }

[dev-dependencies]
serde_yaml = "0.8"
