[package]
name = "kstring"
version = "0.1.0-alpha.8"
authors = ["Ed Page <eopage@gmail.com>"]
description = "Key String: optimized for map keys"
keywords = ["serde", "serialization", "string"]
categories = ["data-structures", "text-processing"]
repository = "https://github.com/cobalt-org/liquid-rust"
documentation = "https://docs.rs/kstring"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[badges]
azure-devops = { project = "cobalt-org", pipeline = "liquid-rust" }

[dependencies]
serde = "1.0"
