[package]
name = "liquid-lib"
version = "0.23.0"
authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
description = "The liquid templating language for Rust"
repository = "https://github.com/cobalt-org/liquid-rust/tree/master/liquid-lib"
documentation = "https://docs.rs/liquid-lib"
readme = "README.md"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
license = "MIT OR Apache-2.0"
edition = "2018"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.docs.rs]
features = [ "default", "jekyll", "all" ]

[dependencies]
liquid-core = { version = "^0.23.0", path = "../core", features = ["derive"] }
kstring = "1.0"
itertools = "0.10.0"
regex = "1.0"
unicode-segmentation = "1.2"
percent-encoding = "2.0"
chrono = "0.4"
once_cell = "1.0"
deunicode = { version = "1.0.0", optional = true }

[features]
default = ["stdlib"]
stdlib = []
shopify = []
jekyll = ["deunicode"]
extra = []
all = ["stdlib", "jekyll", "shopify", "extra"]
