[package]
name = "liquid-lib"
version = "0.26.2"
authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
description = "The liquid templating language for Rust"
repository = "https://github.com/cobalt-org/liquid-rust/tree/master/liquid-lib"
documentation = "https://docs.rs/liquid-lib"
readme = "README.md"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
features = [ "default", "jekyll", "all" ]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
liquid-core = { version = "^0.26.2", path = "../core", features = ["derive"] }
itertools = "0.10.0"
regex = "1.0"
unicode-segmentation = "1.2"
percent-encoding = "2.0"
time = { version = "0.3", default-features = false }
once_cell = "1.0"
deunicode = { version = "1.0.0", optional = true }

[features]
default = ["stdlib"]
stdlib = []
shopify = []
jekyll = ["deunicode"]
extra = []
all = ["stdlib", "jekyll", "shopify", "extra"]
