[package]
name = "liquid-lib"
version = "0.26.11"
description = "The liquid templating language for Rust"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
features = [ "default", "jekyll", "all" ]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
liquid-core = { version = "^0.26.11", path = "../core", features = ["derive"] }
itertools = "0.14.0"
regex = "1.0"
unicode-segmentation = "1.2"
percent-encoding = "2.3.1"
time = { version = "0.3", default-features = false }
deunicode = { version = "1.0.0", optional = true }

[features]
default = ["stdlib"]
stdlib = []
shopify = []
jekyll = ["deunicode"]
extra = []
all = ["stdlib", "jekyll", "shopify", "extra"]

[lints]
workspace = true
