[package]
name = "liquid_ext"
version = "0.1.0"
description = "Ruby native extension bridge for liquid-rust"
publish = false
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[lib]
name = "liquid_ext"
crate-type = ["cdylib"]
test = false

[dependencies]
liquid = { path = "../../", features = ["conformance-harness"] }
liquid-core = { version = "^1.0.0", path = "../core" }
liquid-lib = { version = "^1.0.0", path = "../lib", features = ["stdlib"] }
magnus = "0.8.2"
rb-sys = "0.9.95"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
