[package]
name = "liquid-value"
version = "0.20.0-alpha.3"
authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
description = "The liquid templating language for Rust"
repository = "https://github.com/cobalt-org/liquid-rust/tree/master/crate/value"
documentation = "https://docs.rs/liquid-value"
readme = "README.md"
categories = ["template-engine"]
keywords = ["liquid", "template", "templating", "language", "html"]
license = "MIT"
edition = "2018"

[badges]
azure-devops = { project = "cobalt-org", pipeline = "liquid-rust" }

[dependencies]
itertools = "0.8.0"
num-traits = "0.2"
# Exposed in API
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
kstring = { version = "0.1.0-alpha.0", path = "../kstring" }
liquid-error = { version = "0.20.0-alpha.0", path = "../error" }

[dev-dependencies]
difference = "2.0"
serde_yaml = "0.8"
